--- a/src/views/products.html
+++ b/src/views/products.html
@@ -21,9 +21,10 @@
             <span>Past Orders</span>
           </a>
         </nav>
-        <a href="#" class="top-bar-cart-link">
+        <a @click="toggleSidebar" class="top-bar-cart-link">
           <i class="icofont-cart-alt icofont-1x"></i>
-          <span>Cart (0)</span>
+          <!-- الرقم جانب عربة التسوق (عدد المنتجات) -->
+          <span>Cart ({{ totalQuantity }})</span>
         </a>
       </header>
 
@@ -261,7 +262,16 @@
         </div>
       </main>
 
+      <sidebar
+        v-if="showSidebar"
+        :toggle="toggleSidebar"
+        :cart="cart"
+        :inventory="inventory"
+        :remove="removeItem"
+        />
     </div>
 
+    <script src="https://unpkg.com/vue@next"></script>
+    <script src="../app.js"></script>
   </body>
 </html>
